--- a/source/_patterns/00-elements/01-helpers/layout-wrapper.scss
+++ b/source/_patterns/00-elements/01-helpers/layout-wrapper.scss
@@ -1,4 +1,4 @@
-@mixin layout-wrapper($breakpoint, $margin: 2%) {
+@mixin layout-wrapper($breakpoint, $margin: $spacing-large) {
   margin-left: $margin;
   margin-right: $margin;
 
