--- a/source/_patterns/00-elements/04-text/text.scss
+++ b/source/_patterns/00-elements/04-text/text.scss
@@ -1,7 +1,4 @@
 .text {
-  @include layout-wrapper($breakpoint-largedesk);
-
-
   &--lead {
     font-family: $font-bold;
     margin-left: auto;
@@ -16,7 +13,7 @@
     margin-top: 60px;
     padding-top: 60px;
 
-    p+p {
+    p + p {
       margin-top: 30px;
     }
   }
